--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Title</title>
 </head>
 <body>
