--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -1,42 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="web-res/js/jquery-3.2.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="http://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="logginn.css">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logg inn</title>
 </head>
+
 <body>
-<div class="site-wrapper">
-
-    <div class="site-wrapper-inner">
-
-        <div class="container">
-
-            <div class="masthead clearfix">
-                <div class="container inner">
-                    <h3 class="masthead-brand">Household Manager</h3>
-
-                </div>
-            </div>
-
-            <div class="inner cover">
-                <h1 class="cover-heading">Logg inn</h1>
-                <input id="epost" type="String" placeholder="Skriv inn din epost">
-                <input id="passord" type="String" placeholder="Skriv inn passord">
-                <p class="lead">
-                    <a href="#" class="btn btn-lg btn-default">Logg inn</a>
-                </p>
-            </div>
-
-        </div>
-
+<div id="siden">
+<h1 class = cover-heading>Logg inn</h1>
+    <div id="halvesiden">
+        <input id="epost" type="String" placeholder="Skriv inn epost">
+        <input id="passord" type="String" placeholder="Skriv inn passord">
+        <button id = logginn">Logg inn</button>
     </div>
-
 </div>
-
 </body>
 </html>
-
