--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -5,20 +5,33 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="logginn.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logg inn</title>
 </head>
 
-<body>
-<div id="siden">
-<h1 class = cover-heading>Logg inn</h1>
-    <div id="halvesiden">
-        <input id="epost" type="String" placeholder="Skriv inn epost">
-        <input id="passord" type="String" placeholder="Skriv inn passord">
-        <button id = logginn">Logg inn</button>
-    </div>
-</div>
+<body class="vsc-initialized">
+
+<div class="container">
+
+    <form class="form-signin">
+        <h2 class="form-signin-heading">Logg inn</h2>
+        <label for="inputEmail" class="sr-only">Epostadresse</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="Epostadresse" required="" autofocus="">
+        <label for="inputPassword" class="sr-only">Passord</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Passord" required="">
+        <div class="checkbox">
+            <label>
+                <input type="checkbox" value="forgotten-password"> Glemt passord?
+            </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Logg inn</button>
+    </form>
+
+</div> <!-- /container -->
+
+
 </body>
 </html>
