--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -14,6 +14,7 @@
 
 <body class="vsc-initialized">
 
+<div id="settestørrelse"></div>
 <div class="container">
 
     <form class="form-signin">
@@ -30,7 +31,7 @@
         <button class="btn btn-lg btn-primary btn-block" type="submit">Logg inn</button>
     </form>
 
-</div> <!-- /container -->
+</div>
 
 
 </body>
