--- a/HHManager/src/main/webapp/HTML/forside.html
+++ b/HHManager/src/main/webapp/HTML/forside.html
@@ -22,7 +22,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#"><img class="logo" src="logoused.png"></a>
+            <a href="#"><img class="logo" src="../../resources/Bilder/logoused.png" alt="Logo" width="99" height="43"></a>
             <!--<a class="navbar-brand" href="#">Household Manager</a>-->
         </div>
 
