her er stor logo

--- a/HHManager/src/main/webapp/HTML/forside.html
+++ b/HHManager/src/main/webapp/HTML/forside.html
@@ -12,6 +12,7 @@
 
 <body>
 
+<!--NAVBAR-->
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -54,6 +55,26 @@
         </div><!-- /.navbar-collapse -->
    </div><!-- /.container-fluid -->
 </nav>
+
+<div class="media">
+    <div class="media-left media-top">
+        <img src="avatar.png" class="media-object" style="width:80px">
+    </div>
+    <div class="media-body">
+        <h4 class="media-heading">Media Top</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    </div>
+</div>
+
+
+<!--KOMMENTARFELT-->
+<div class="form-group">
+    <label for="comment">Comment:</label>
+    <textarea class="form-control" rows="5" id="comment"></textarea>
+</div>
+
 
 </body>
 </html>
