laget nyhetsoppdatering på forside

--- a/HHManager/src/main/webapp/HTML/forside.html
+++ b/HHManager/src/main/webapp/HTML/forside.html
@@ -56,20 +56,47 @@
    </div><!-- /.container-fluid -->
 </nav>
 
-<div class="media">
-    <div class="media-left media-top">
-        <img src="avatar.png" class="media-object" style="width:80px">
-    </div>
-    <div class="media-body">
-        <h4 class="media-heading">Media Top</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<!--KOMMENTAR MED AVATAR-->
+<div class="container">
+    <h2>Nyhetsoppdatering</h2>
+    <br>
+    <div class="media">
+        <div class="media-left">
+            <img src="../../resources/Bilder/avatar.png" class="media-object" style="width:45px">
+        </div>
+        <div class="media-body">
+            <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+            <!-- Nested media object -->
+            <div class="media">
+                <div class="media-left">
+                    <img src="../../resources/Bilder/avatar.png" class="media-object" style="width:45px">
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                    <!-- Nested media object -->
+                    <div class="media">
+                        <div class="media-left">
+                            <img src="../../resources/Bilder/avatar.png" class="media-object" style="width:45px">
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
 
 
-<!--KOMMENTARFELT-->
+        <!--KOMMENTARFELT-->
 <div class="form-group">
     <label for="comment">Comment:</label>
     <textarea class="form-control" rows="5" id="comment"></textarea>
