laget gjøremål og handleliste på forside

--- a/HHManager/src/main/webapp/HTML/forside.html
+++ b/HHManager/src/main/webapp/HTML/forside.html
@@ -56,6 +56,11 @@
    </div><!-- /.container-fluid -->
 </nav>
 
+
+<div class="modal-body row">
+    <div class="col-md-6">
+        <!-- Your first column here -->
+
 <!--KOMMENTAR MED AVATAR-->
 <div class="container">
     <h2>Nyhetsoppdatering</h2>
@@ -100,8 +105,53 @@
 <div class="form-group">
     <label for="comment">Comment:</label>
     <textarea class="form-control" rows="5" id="comment"></textarea>
+    <p align="right">
+    <button type="button" class="btn">Send</button>
+    </p>
 </div>
 
+    </div>
+    <div class="col-md-6">
+        <!-- Your second column here -->
+
+
+<div class="container-chekcbox">
+    <h2>Mine gjøremål</h2>
+    <br>
+<div class="checkbox">
+    <label><input type="checkbox" value="">Option 1</label>
+</div>
+<div class="checkbox">
+    <label><input type="checkbox" value="">Option 2</label>
+</div>
+<div class="checkbox disabled">
+    <label><input type="checkbox" value="" disabled>Option 3</label>
+</div>
+    <p align="right">
+        <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
+    </p>
+
+        <h2>Handleliste</h2>
+        <br>
+        <div class="checkbox">
+            <label><input type="checkbox" value="">Option 1</label>
+        </div>
+        <div class="checkbox">
+            <label><input type="checkbox" value="">Option 2</label>
+        </div>
+        <div class="checkbox disabled">
+            <label><input type="checkbox" value="" disabled>Option 3</label>
+        </div>
+        <p align="right">
+            <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
+        </p>
+
+</div>
+
+
+
+    </div>
+</div>
 
 </body>
 </html>
