--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -3,7 +3,9 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    -->
     <script src="http://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="../CSS/logginn.css">
@@ -14,14 +16,15 @@
 </head>
 
 <body class="vsc-initialized">
-<div id="settestørrelse">
     <div class="container">
-        <form class="form-signin">
-            <a href="#"><img class="logo" src="../../resources/Bilder/storlogo.png" alt="Logo"width="800" height="600"></a>
-            <h2 class="form-signin-heading">Logg inn</h2>
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <input id="email" type="text" class="form-control" name="email" placeholder="Email">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-8">
+                <form class="form-signin">
+                <a href="#"><img class="logo img-fluid img-thumbnail" src="../../resources/Bilder/storlogo.png" alt="Logo"width="800" height="600"></a>
+                <h2 class="form-signin-heading">Logg inn</h2>
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                    <input id="email" type="text" class="form-control" name="email" placeholder="Email">
             </div>
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
@@ -34,7 +37,8 @@
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="button">Logg inn</button>
         </form>
+            </div>
+            <div class="col-sm-2"></div>
     </div>
-</div>
 </body>
 </html>
