laget "ferdig" forsside for data

--- a/HHManager/src/main/webapp/HTML/forside.html
+++ b/HHManager/src/main/webapp/HTML/forside.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:border-right="http://www.w3.org/1999/xhtml">
 <head>
     <title>Household Manager</title>
     <meta charset="utf-8">
@@ -49,6 +49,7 @@
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
                 <li><a href="#">Ola Nordmann</a></li>
                 <li><a href="#"><span class="glyphicon glyphicon-bell"></span><span class="badge">42</span></a></li>
             </ul>
@@ -57,8 +58,8 @@
 </nav>
 
 
-<div class="modal-body row">
-    <div class="col-md-6">
+<div class="row grid-divider">
+    <div class="col-md-8">
         <!-- Your first column here -->
 
 <!--KOMMENTAR MED AVATAR-->
@@ -111,9 +112,8 @@
 </div>
 
     </div>
-    <div class="col-md-6">
+    <div class="col-md-4">
         <!-- Your second column here -->
-
 
 <div class="container-chekcbox">
     <h2>Mine gjøremål</h2>
@@ -146,11 +146,7 @@
             <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
         </p>
 
-
 </div>
-
-
-
     </div>
 </div>
 
