--- a/HHManager/src/main/webapp/HTML/profil.html
+++ b/HHManager/src/main/webapp/HTML/profil.html
@@ -52,10 +52,22 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
-<div id="settestørrelse">
-<div style="display:block;text-align:left">
-    <a href="https://some.addres" imageanchor="1"><img align="left" src="../../resources/Bilder/profileicon.png" width="4%" border="0"></a><h1>Ola Normann</h1>
+<div class="container">
+<div class="col"></div>
+<div class="col-8" id="venstreside">
+    <div style="display:block;text-align:left">
+        <a href="https://some.addres" imageanchor="1"><img align="left" src="../../resources/Bilder/profileicon.png" width="8%" border="0"></a><h1>Ola Normann</h1>
+    </div>
+
+    <div class="input-group">
+        <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+        <input id="email" type="email" class="form-control" name="email" placeholder="olanormann.gmail.com">
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="button"> Endre epost</button>
 </div>
+    <div class="col">
+        <h1>Medlem av følgende husstander</h1>
+    </div>
 </div>
 </body>
 </html>
