fikset feil på forside som kom etter pull

--- a/HHManager/src/main/webapp/HTML/forside.html
+++ b/HHManager/src/main/webapp/HTML/forside.html
@@ -143,10 +143,11 @@
                 <label><input type="checkbox" value="" disabled>Option 3</label>
             </div>
             <p align="right">
-                <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>asa
+                <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
             </p>
 
         </div>
+
     </div>
 </div>
 
