--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:width="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <!--
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     -->
-    <script src="http://cdn.datatables.net/1.10.9/js/jquery.dataTables.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../CSS/logginn.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Logg inn</title>
@@ -17,6 +14,8 @@
 
 <body>
     <div class="container mx-auto">
+        <div class="row">
+            <div class="col">Venstre</div>
             <div class="col-8 mx-auto">
                 <form class="form-signin">
                 <a href="#"><img class="logo img-fluid img-thumbnail" src="../../resources/Bilder/storlogo.png" alt="Logo"width="800" height="600"></a>
@@ -37,6 +36,8 @@
                 <button class="btn btn-lg btn-primary btn-block" type="button">Logg inn</button>
                 </form>
             </div>
+            <div class="col">Høyre</div>
+        </div>
     </div>
 </body>
 </html>
