begynt med litt ajax i js

--- a/HHManager/src/main/webapp/HTML/profil.html
+++ b/HHManager/src/main/webapp/HTML/profil.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/forside.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../Javascript/profil.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -63,7 +64,7 @@
         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
         <input id="email" type="email" class="form-control" name="email" placeholder="olanormann.gmail.com">
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="button"> Endre epost</button>
+    <button class="btn btn-lg btn-primary btn-block" type="button" id="endreEpost"> Endre epost</button>
 </div>
     <div class="col">
         <h1>Medlem av følgende husstander</h1>
