--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../Javascript/logginn.js"></script>
     <!--
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     -->
@@ -29,11 +30,11 @@
                 <input id="password" type="password" class="form-control" name="password" placeholder="Passord">
             </div>
                 <label>
-                    <label> <a href="#">Glemt passord?</a></label>
+                    <label> <a href="glemtpassord.html">Glemt passord?</a></label>
                 </label>
 
-            <button class="btn btn-lg btn-primary btn-block" type="button">Logg inn</button>
-                    <button class = "btn btn-lg btn-primary btn-block" type="button">Ikke medlem? Registrer deg</button>
+            <button class="btn btn-lg btn-primary btn-block" type="button" id="loggInnBtn">Logg inn</button>
+                    <button class = "btn btn-lg btn-primary btn-block" type="button" id="regBruker">Ikke medlem? Registrer deg</button>
         </form>
             </div>
             <div class="col"></div>
