--- a/HHManager/src/main/webapp/HTML/profil.html
+++ b/HHManager/src/main/webapp/HTML/profil.html
@@ -63,18 +63,19 @@
         <button class="btn btn-lg btn-primary btn-block" type="button"> Endre epost</button>
     </div>
     <div class = "col-md-2">
-
     </div>
 
     <div class = "col-md-6">
         <h2>Dine husstander:</h2>
         <div class="husstander">
-        <p><span class="glyphicon glyphicon-star"></span>Husstand 1</p>
-        <p><span class="glyphicon glyphicon-heart"></span>Husstand 2</p>
-        <p><span class="glyphicon glyphicon-remove"></span>Husstand 3</p>
-        <p align="right">
-            <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
-        </p>
+            <form action="">
+                <p><span class="glyphicon glyphicon-star"></span>Husstand 1 <input type="radio" name="favoritt" value="hus1"> Sett favoritt <br></p>
+                <p><span class="glyphicon glyphicon-heart"></span>Husstand 2 <input type="radio" name="favoritt" value="hus2"> Sett favoritt <br></p>
+                <p><span class="glyphicon glyphicon-remove"></span>Husstand 3 <input type="radio" name="favoritt" value="hus3"> Sett favoritt <br></p>
+                <p align="right">
+                    <a href="#"><span class="glyphicon glyphicon-plus-sign"></span></a>
+                </p>
+            </form>
         </div>
     </div>
 </div>
