--- a/HHManager/src/main/webapp/HTML/lagnyhusstand.html
+++ b/HHManager/src/main/webapp/HTML/lagnyhusstand.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Example of Bootstrap 3 Modals</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/lagnyhusstand.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $("#myModal").modal('show');
+        });
+    </script>
 </head>
-<body>
 
+<body>
+<div id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"> <span class="glyphicon glyphicon-home"></span> Lag ny husstand</h4>
+            </div>
+            <div class="modal-body">
+                <div class="husstand">
+                    <p>Navn på husstanden</p>
+                    <input id="text" type="text" class="form-control" name="textfield" placeholder="Skriv navn her">
+                </div>
+                <div class="medlemmer">
+                    <p>Legg til medlemmer:</p>
+                    <input id="navn" type="text" class="form-control" name="textfield" placeholder="Skriv navn her">
+                </div>
+                <button type="button">Legg til</button>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Lukk</button>
+                <button type="button" class="btn btn-primary">Lagre husstand</button>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
