--- a/HHManager/src/main/webapp/HTML/lagbruker.html
+++ b/HHManager/src/main/webapp/HTML/lagbruker.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="../Javascript/lagbruker.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../CSS/lagbruker.css">
 
@@ -56,7 +58,7 @@
                     <label><input type="checkbox" name="terms"> Jeg godtar <a href="#">Brukervilkårene</a>.</label>
                 </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block" type="button">Registrer</button>
+            <button class="btn btn-lg btn-primary btn-block" type="button" id="registrerBtn">Registrer</button>
         </form>
     </div>
 </div>
