--- a/HHManager/src/main/webapp/HTML/lagbruker.html
+++ b/HHManager/src/main/webapp/HTML/lagbruker.html
@@ -35,19 +35,11 @@
             <h2 class="form-signin-heading">Registrer deg</h2>
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <input id="fornavn" type="text" class="form-control" name="fornavn" placeholder="Fornavn">
-            </div>
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <input id="etternavn" type="text" class="form-control" name="etternavn" placeholder="Etternavn">
+                <input id="fornavn" type="text" class="form-control" name="fornavn" placeholder="Navn">
             </div>
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
                 <input id="email" type="email" class="form-control" name="email" placeholder="Email">
-            </div>
-            <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <input id="brukernavn" type="text" class="form-control" name="brukernavn" placeholder="Brukernavn">
             </div>
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
