--- a/HHManager/src/main/webapp/HTML/lagbruker.html
+++ b/HHManager/src/main/webapp/HTML/lagbruker.html
@@ -40,7 +40,7 @@
                 <input id="etternavn" type="text" class="form-control" name="etternavn" placeholder="Etternavn">
             </div>
             <div class="input-group">
-                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                 <input id="email" type="email" class="form-control" name="email" placeholder="Email">
             </div>
             <div class="input-group">
