--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -32,8 +32,10 @@
                 <label>
                     <label><a href="glemtpassord.html">Glemt passord?</a></label>
                 </label>
-                <button class="btn btn-lg btn-primary btn-block" type="button" id="loggInnBtn">Logg inn</button>
-                <button class = "btn btn-lg btn-primary btn-block" type="button" id="regBruker">Ikke medlem? Registrer deg</button>
+                <div class="col">
+                    <button class="btn btn-lg btn-primary btn-block" type="button" id="loggInnBtn">Logg inn</button>
+                    <button class = "btn btn-lg btn-primary btn-block" type="button" id="regBruker">Ikke medlem? Registrer deg</button>
+                </div>
             </form>
         </div>
     </div>
