--- a/HHManager/src/main/webapp/HTML/glemtpassord.html
+++ b/HHManager/src/main/webapp/HTML/glemtpassord.html
@@ -14,20 +14,15 @@
 
 <div class="container glemtpassord">
     <div class="col-8">
-        <a href="#"><img class="logo img-fluid img-thumbnail" src="../../resources/Bilder/storlogo.png" alt="Logo"></a>
-        <h2>Glemt passord</h2>
         <form class="form-horizontal">
-            <div class="form-group">
+            <a href="#"><img class="logo img-fluid img-thumbnail" src="../../resources/Bilder/storlogo.png" alt="Logo"></a>
+            <h2>Glemt passord</h2>
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
                     <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                </div>
             </div>
-            <div class="form-group">
-                <div class="col-sm-10">
-                    <button type="submit" class="btn btn-default">Send på nytt</button>
-                </div>
-            </div>
+
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Send på nytt</button>
         </form>
     </div>
 </div>
