Added confirm new password

--- a/HHManager/src/main/webapp/HTML/endrepassord.html
+++ b/HHManager/src/main/webapp/HTML/endrepassord.html
@@ -35,6 +35,10 @@
                     <p>Nytt passord</p>
                     <input id="navn" type="text" class="form-control" name="textfield" placeholder="Skriv nytt passord her">
                 </div>
+                <div class="medlemmer2">
+                    <p>Bekreft nytt passord</p>
+                    <input id="navn2" type="text" class="form-control" name="textfield" placeholder="Bekreft nytt passord her">
+                </div>
             </div>
 
             <div class="modal-footer">
