Navbar i egen klasse

--- a/HHManager/src/main/webapp/HTML/lagbruker.html
+++ b/HHManager/src/main/webapp/HTML/lagbruker.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../CSS/lagbruker.css">
+    <script src="../Javascript/nav.js"></script>
 
     <title>Registrere bruker</title>
 
