--- a/HHManager/src/main/webapp/HTML/lagnyhusstand.html
+++ b/HHManager/src/main/webapp/HTML/lagnyhusstand.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="../CSS/lagnyhusstand.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../Javascript/nav.js"></script>
     <script type="text/javascript">
         $(document).ready(function(){
             $("#myModal").modal('show');
