--- a/HHManager/src/main/webapp/HTML/logginn.html
+++ b/HHManager/src/main/webapp/HTML/logginn.html
@@ -6,6 +6,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="../Javascript/logginn.js"></script>
+    <script src="../Javascript/nav.js"></script>
     <!--
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     -->
