--- a/HHManager/src/main/webapp/HTML/profil.html
+++ b/HHManager/src/main/webapp/HTML/profil.html
@@ -18,12 +18,17 @@
     <div class = "col-md-4">
         <a href="https://some.addres" imageanchor="1"><img align="left" src="../../resources/Bilder/profileicon.png" width="14%" border="0"></a><h1>Ola Normann</h1>
         <div class="input-group">
+
         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
         <input id="email" type="email" class="form-control" name="email" placeholder="olanormann.gmail.com">
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="button"> Endre epost</button>
     </div>
+
     <div class = "col-md-2">
+        <div class="størrelse">
+            <button class="btn btn-lg btn-primary btn-block" type="button"> Endre navn</button>
+            <button class="btn btn-lg btn-primary btn-block" type="button"> Endre epost</button>
+        </div>
     </div>
 
     <div class = "col-md-6">
