Fixed view again

--- a/HHManager/src/main/webapp/HTML/forside.html
+++ b/HHManager/src/main/webapp/HTML/forside.html
@@ -18,7 +18,7 @@
 <div id="navbar">
 </div>
 <div class="container-fluid">
-    <div class="row grid-divider">
+    <div class="row">
         <div class="col-md-8">
             <!-- Your first column here -->
 
@@ -63,7 +63,7 @@
 
 
             <!--KOMMENTARFELT-->
-            <div class=" container-kommentarfelt">
+            <div class="form-group container-kommentarfelt">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
                 <p align="right">
@@ -73,7 +73,7 @@
 
 
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 vl">
             <!-- Your second column here -->
 
             <div class="container-checkbox">
