--- a/HHManager/src/main/webapp/HTML/handlelister.html
+++ b/HHManager/src/main/webapp/HTML/handlelister.html
@@ -9,9 +9,156 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="../Javascript/nav.js"></script>
+    <link rel="stylesheet" type="text/css" href="../CSS/handlelister.css">
 </head>
 <body>
-<h1> HER JOBBER TONI </h1>
+
+<!--NAVBAR-->
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="#"><img class="logo" src="../../resources/Bilder/logoused.png" alt="Logo" width="99"
+                             height="43"></a>
+            <!--<a class="navbar-brand" href="#">Household Manager</a>-->
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <!--<li><a href="#"><span class="glyphicon glyphicon-home"></span></a></li>-->
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Husstander <span class="caret"></span></a>
+                <li><a href="#">Gjøremål</a></li>
+                <li><a href="#">Kalender</a></li>
+                <li><a href="#">Handlelister</a></li>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">Separated link</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">One more separated link</a></li>
+                </ul>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-credit-card"> -32NOK</span></a></li>
+                <li><a href="#">Ola Nordmann</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-bell"></span><span class="badge">42</span></a></li>
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+
+<!-- Accordion with checkboxes-->
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <h1>Handlelister</h1>
+        <div class="panel-group" id="accordion">
+            <div class="panel panel-default">
+                <div class="panel-heading clearfix">
+                    <h4 class="panel-title pull-left" style="padding-top: 7.5px;">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                            Søndagslista</a>
+                    </h4>
+                    <div>
+                        <button type="button" class="btn btn-danger pull-right">Slett handleliste</button>
+                    </div>
+                </div>
+                <div id="collapse1" class="panel-collapse collapse in">
+                    <div class="panel-body">
+                        <div class="panel-body">
+                            <div class="list-group" id="list1">
+                                <a href="#" class="list-group-item ">List 1 <input title="toggle all" type="checkbox"
+                                                                                   class="all pull-right"></a>
+                                <a href="#" class="list-group-item">Second item <input type="checkbox"
+                                                                                       class="pull-right"></a>
+                                <a href="#" class="list-group-item">Third item <input type="checkbox"
+                                                                                      class="pull-right"></a>
+                                <a href="#" class="list-group-item">More item <input type="checkbox" class="pull-right"></a>
+                                <a href="#" class="list-group-item">Another <input type="checkbox"
+                                                                                   class="pull-right"></a>
+                                <button id="utlegg" type="button" class="btn btn-primary pull-left">Lag utlegg</button>
+                                <!-- Rounded switch -->
+                                <h5 id="offtekst" class="pull-right">Offentlig</h5>
+                                <label class="switch pull-right">
+                                    <input type="checkbox">
+                                    <span class="slider round"></span>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <h4 class="panel-title">
+                            <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                                Festliste</a>
+                        </h4>
+                    </div>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">
+                            <div class="list-group" id="list2">
+                                <a href="#" class="list-group-item ">List 1 <input title="toggle all" type="checkbox"
+                                                                                   class="all pull-right"></a>
+                                <a href="#" class="list-group-item">Second item <input type="checkbox"
+                                                                                       class="pull-right"></a>
+                                <a href="#" class="list-group-item">Third item <input type="checkbox"
+                                                                                      class="pull-right"></a>
+                                <a href="#" class="list-group-item">More item <input type="checkbox" class="pull-right"></a>
+                                <a href="#" class="list-group-item">Another <input type="checkbox"
+                                                                                   class="pull-right"></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                                    Vasking</a>
+                            </h4>
+                        </div>
+                        <div id="collapse3" class="panel-collapse collapse">
+                            <div class="panel-body">
+                                <div class="list-group" id="list3">
+                                    <a href="#" class="list-group-item ">List 1 <input title="toggle all"
+                                                                                       type="checkbox"
+                                                                                       class="all pull-right"></a>
+                                    <a href="#" class="list-group-item">Second item <input type="checkbox"
+                                                                                           class="pull-right"></a>
+                                    <a href="#" class="list-group-item">Third item <input type="checkbox"
+                                                                                          class="pull-right"></a>
+                                    <a href="#" class="list-group-item">More item <input type="checkbox"
+                                                                                         class="pull-right"></a>
+                                    <a href="#" class="list-group-item">Another <input type="checkbox"
+                                                                                       class="pull-right"></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="nyhandel" class="container">
+            <button type="button" class="btn btn-primary">Legg til ny handleliste</button>
+        </div>
+    </div>
+    <div class="col-md-3"></div>
+</div>
+</body>
+</html>
 
 </body>
 </html>
