Fløtta HTML + laga web-res for å få rett mappestruktur

--- a/HHManager/src/main/webapp/forside.html
+++ b/HHManager/src/main/webapp/forside.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../CSS/forside.css">
+    <link rel="stylesheet" type="text/css" href="/CSS/forside.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="shortcut icon" href="../../resources/Bilder/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="web-res/favicon.ico" type="image/x-icon" />
     <script src="../Javascript/nav.js"></script>
 
 </head>
@@ -29,7 +29,7 @@
             <br>
             <div class="media">
                 <div class="media-left">
-                    <img src="../../resources/Bilder/avatar.png" class="media-object" style="width:45px">
+                    <img src="web-res/avatar.png" class="media-object" style="width:45px">
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
@@ -38,7 +38,7 @@
                     <!-- Nested media object -->
                     <div class="media">
                         <div class="media-left">
-                            <img src="../../resources/Bilder/avatar.png" class="media-object" style="width:45px">
+                            <img src="web-res/avatar.png" class="media-object" style="width:45px">
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
@@ -47,7 +47,7 @@
                             <!-- Nested media object -->
                             <div class="media">
                                 <div class="media-left">
-                                    <img src="../../resources/Bilder/avatar.png" class="media-object" style="width:45px">
+                                    <img src="web-res/avatar.png" class="media-object" style="width:45px">
                                 </div>
                                 <div class="media-body">
                                     <h4 class="media-heading">John Doe <small><i>Posted on February 19, 2016</i></small></h4>
