--- a/HHManager/src/main/webapp/profil.html
+++ b/HHManager/src/main/webapp/profil.html
@@ -16,7 +16,7 @@
 
 <div class = "row grid-divider">
     <div class = "col-md-4">
-        <a href="https://some.addres" imageanchor="1"><img align="left" src="../../resources/Bilder/profileicon.png" width="14%" border="0"></a><h1>Ola Normann</h1>
+        <a href="https://some.addres" imageanchor="1"><img align="left" src="web-res/profileicon.png" width="14%" border="0"></a><h1>Ola Normann</h1>
         <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
         <input id="email" type="email" class="form-control" name="email" placeholder="olanormann.gmail.com">
