--- a/HHManager/src/main/webapp/glemtpassord.html
+++ b/HHManager/src/main/webapp/glemtpassord.html
@@ -16,7 +16,7 @@
 <div class="container glemtpassord">
     <div class="col-8">
         <form class="form-horizontal">
-            <a href="#"><img class="logo img-fluid img-thumbnail" src="../../resources/Bilder/storlogo.png" alt="Logo"></a>
+            <a href="#"><img class="logo img-fluid img-thumbnail" src="web-res/storlogo.png" alt="Logo"></a>
             <h2>Glemt passord</h2>
                 <div class="input-group">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
