--- a/HHManager/src/main/webapp/lagbruker.html
+++ b/HHManager/src/main/webapp/lagbruker.html
@@ -32,7 +32,7 @@
 <div class="container">
     <div class="col-8">
         <form class="form-signin">
-            <a href="#"><img class="logo img-fluid img-thumbnail" src="../../resources/Bilder/storlogo.png" alt="Logo"></a>
+            <a href="#"><img class="logo img-fluid img-thumbnail" src="web-res/storlogo.png" alt="Logo"></a>
             <h2 class="form-signin-heading">Registrer deg</h2>
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
