--- a/HHManager/src/main/webapp/nav.html
+++ b/HHManager/src/main/webapp/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="#"><img class="logo" src="../../resources/Bilder/logoused.png" alt="Logo" width="99" height="43"></a>
+            <a href="#"><img class="logo" src="web-res/logoused.png" alt="Logo" width="99" height="43"></a>
             <!--<a class="navbar-brand" href="#">Household Manager</a>-->
         </div>
 
